--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,24 +1,24 @@
-NotBlank={0} é obrigatório
-NotNull={0} é obrigatório
+NotBlank={0} ï¿½ obrigatï¿½rio
+NotNull={0} ï¿½ obrigatï¿½rio
 #PositiveOrZero={0} deve ser um valor maior ou igual a zero
 
-TaxaFrete.invalida={0} esta inválida
-Multiplo={0} o valor informado não é multiplo de {1}
+TaxaFrete.invalida={0} esta invï¿½lida
+Multiplo={0} o valor informado nao e multiplo de {1}
 
 # Cozinha
 cozinha.nome=Nome da cozinha
-cozinha.id=Código da cozinha
+cozinha.id=Cï¿½digo da cozinha
 
 # Restaurante
-NotNull.restaurante.taxaFrete={0} é obrigatória
-NotNull.restaurante.cozinha={0} é obrigatória
+NotNull.restaurante.taxaFrete={0} ï¿½ obrigatï¿½ria
+NotNull.restaurante.cozinha={0} ï¿½ obrigatï¿½ria
 restaurante.nome=Nome do restaurante
 restaurante.cozinha=Cozinha do restaurante
 restaurante.taxaFrete=Taxa de frete do restaurante
 
 # Estado
 estado.nome=Nome do estado
-estado.id=Código do estado
+estado.id=Cï¿½digo do estado
 
 # Cidade
 cidade.nome=Nome da cidade
