configuracao de representacao de atributo

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,11 +10,11 @@ cozinha.nome=Nome da cozinha
 cozinha.id=Codigo da cozinha
 
 # Restaurante
-NotNull.restaurante.taxaFrete={0} e obrigatoria
-NotNull.restaurante.cozinha={0} e obrigatoria
-restaurante.nome=Nome do restaurante
-restaurante.cozinha=Cozinha do restaurante
-restaurante.taxaFrete=Taxa de frete do restaurante
+NotNull.restauranteInput.taxaFrete={0} e obrigatoria
+NotNull.restauranteInput.cozinha={0} e obrigatoria
+restauranteInput.nome=Nome do restaurante
+restauranteInput.cozinha=Cozinha do restaurante
+restauranteInput.taxaFrete=Taxa de frete do restaurante
 
 # Estado
 estado.nome=Nome do estado
