--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,3 +23,8 @@ estado.id=Codigo do estado
 # Cidade
 cidade.nome=Nome da cidade
 cidade.estado=Estado da cidade
+
+#FORMA PAGAMENTO
+NotBlank.formaPagamentoInput.descricao={0} é obrigatória
+formaPagamentoInput.id=Código da forma de pagamento
+formaPagamentoInput.descricao=Descrição da forma de pagamento
