adicionando endereco ao inserir um restaurante

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,3 +28,12 @@ cidade.estado=Estado da cidade
 NotBlank.formaPagamentoInput.descricao={0} é obrigatória
 formaPagamentoInput.id=Código da forma de pagamento
 formaPagamentoInput.descricao=Descrição da forma de pagamento
+
+#ENDERECO
+endereco=Endereço
+endereco.cep=CEP
+endereco.logradouro=Logradouro
+endereco.numero=Número
+endereco.bairro=Bairro
+endereco.cidade=Cidade
+endereco.cidade.id=Código da cidade
