--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -37,3 +37,6 @@ endereco.numero=Número
 endereco.bairro=Bairro
 endereco.cidade=Cidade
 endereco.cidade.id=Código da cidade
+
+#GRUPO
+grupoInput.nome=Nome do grupo
