--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,3 +40,18 @@ endereco.cidade.id=Código da cidade
 
 #GRUPO
 grupoInput.nome=Nome do grupo
+
+#USUARIO
+NotBlank.usuarioComSenhaInput.senha={0} é obrigatória
+usuarioComSenhaInput.nome=Nome do usuário
+usuarioComSenhaInput.email=E-mail do usuário
+usuarioComSenhaInput.senha=Senha do usuário
+
+usuarioInput.nome=Nome do usuário
+usuarioInput.email=E-mail do usuário
+
+NotBlank.senhaInput.senhaAtual={0} é obrigatória
+NotBlank.senhaInput.novaSenha={0} é obrigatória
+senhaInput.senhaAtual=Senha atual
+senhaInput.novaSenha=Nova senha
+
