chore:ajuste de mensagem de retorno de exception da api

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,8 @@
 NotBlank={0} e obrigatorio
 NotNull={0} e obrigatorio
 #PositiveOrZero={0} deve ser um valor maior ou igual a zero
+typeMismatch.java.lang.Long={0} deve sser um número válido
+typeMismatch.java.time.OffsetDateTime={0} não é uma data/hora válida
 
 TaxaFrete.invalida={0} esta invalida
 Multiplo={0} o valor informado nao e multiplo de {1}
@@ -15,6 +17,7 @@ NotNull.restauranteInput.cozinha={0} e obrigatoria
 restauranteInput.nome=Nome do restaurante
 restauranteInput.cozinha=Cozinha do restaurante
 restauranteInput.taxaFrete=Taxa de frete do restaurante
+restaurante.id=Código do restaurante
 
 # Estado
 estado.nome=Nome do estado
@@ -28,6 +31,7 @@ cidade.estado=Estado da cidade
 NotBlank.formaPagamentoInput.descricao={0} é obrigatória
 formaPagamentoInput.id=Código da forma de pagamento
 formaPagamentoInput.descricao=Descrição da forma de pagamento
+formaPagamento.id=Código da forma de pagamento
 
 #ENDERECO
 endereco=Endereço
@@ -78,6 +82,12 @@ enderecoEntrega.cidade.id=Código da cidade do endereço de entrega
 enderecoEntrega.cep=CEP do endereço de entrega
 enderecoEntrega.bairro=Bairro do endereço de entrega
 
-restaurante.id=Código do restaurante
-formaPagamento.id=Código da forma de pagamento
+#PEDIDO FILTER
+pedidoFilter.clienteId=Código do cliente
+pedidoFilter.restauranteId=Código do restaurante
+pedidoFilter.dataCriacaoInicio=Data criação inicio
+pedidoFilter.dataCriacaoFim=Data criação fim
+
+
+
 
