refactor:ajustando predicates de data criacao inicio e fim

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -88,6 +88,11 @@ pedidoFilter.restauranteId=Código do restaurante
 pedidoFilter.dataCriacaoInicio=Data criação inicio
 pedidoFilter.dataCriacaoFim=Data criação fim
 
+#VENDAS DIARIAS
+vendaDiariaFilter.dataCriacaoInicio=Data inicial de criação de pedido
+vendaDiariaFilter.dataCriacaoFim=Data final de criação de pedido
+vendaDiariaFilter.restauranteId=Código do restaurante 
+
 
 
 
