feat:criado validar para o tipo do arquivo

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -97,6 +97,7 @@ vendaDiariaFilter.restauranteId=Código do restaurante
 fotoProdutoInput.arquivo=O atributo de arquivo
 fotoProdutoInput.descricao=O atribuito de descrição
 FileSize.fotoProdutoInput.arquivo=Tamanho do arquivo não pode ser maior que {1}
+FileContentType.fotoProdutoInput.arquivo=A foto deve ser do tipo JPG ou PNG
 
 
 
